sumo/tests/netconvert/errors/XML/broken_edge/edge#priority__false4/errors.netconvert
Error: Not numeric value for priority in edge '4'.
Quitting (on error).
